--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^18.0.0",
     "react-bootstrap": "^2.3.1",
     "react-dom": "^18.0.0",
+    "react-facebook": "^8.1.4",
     "react-intl": "^5.20.2",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^5.2.0",
