--- a/package.json
+++ b/package.json
@@ -24,14 +24,17 @@
     "react-bootstrap": "^2.3.1",
     "react-dom": "^18.0.0",
     "react-facebook": "^8.1.4",
+    "react-flatpickr": "^3.10.7",
     "react-intl": "^5.20.2",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.0",
-    "react-select": "^5.3.0",
+    "react-select": "^5.3.2",
+    "react-slick": "^0.29.0",
     "react-toastify": "^8.2.0",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.1",
+    "slick-carousel": "^1.8.1",
     "sweetalert2": "^11.4.8",
     "web-vitals": "^2.1.4"
   },
