--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
     "connected-react-router": "^6.9.2",
+    "jquery": "^3.6.0",
     "js-base64": "^2.6.4",
     "js-cookie": "^3.0.1",
     "jwt-decode": "^3.1.2",
