--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "moment": "^2.29.2",
     "node-sass": "^7.0.1",
     "plyr-react": "^4.0.0",
+    "prop-types": "^15.8.1",
     "react": "^18.0.0",
     "react-bootstrap": "^2.3.1",
     "react-dom": "^18.0.0",
