--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bootstrap": "^5.1.3",
     "buffer": "^6.0.3",
     "connected-react-router": "^6.9.2",
+    "date-fns": "^2.28.0",
     "jquery": "^3.6.0",
     "js-base64": "^2.6.4",
     "js-cookie": "^3.0.1",
@@ -33,6 +34,7 @@
     "react-dom": "^18.0.0",
     "react-facebook": "^8.1.4",
     "react-flatpickr": "^3.10.7",
+    "react-icons": "^4.4.0",
     "react-intl": "^5.20.2",
     "react-modal-video": "^1.2.8",
     "react-responsive-carousel": "^3.2.23",
