--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-scripts": "5.0.0",
     "react-select": "^5.3.2",
     "react-simple-captcha": "^9.0.0",
+    "react-simple-star-rating": "^4.0.5",
     "react-slick": "^0.29.0",
     "react-toastify": "^8.2.0",
     "redux-persist": "^6.0.0",
