--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-flatpickr": "^3.10.7",
     "react-icons": "^4.4.0",
     "react-intl": "^5.20.2",
+    "react-loading-overlay": "^1.0.1",
     "react-modal-video": "^1.2.8",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^5.2.0",
@@ -44,7 +45,9 @@
     "react-simple-captcha": "^9.0.0",
     "react-simple-star-rating": "^4.0.5",
     "react-slick": "^0.29.0",
+    "react-spinners": "^0.13.3",
     "react-toastify": "^8.2.0",
+    "reactstrap": "^9.1.1",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.1",
     "slick-carousel": "^1.8.1",
