--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-dom": "^18.0.0",
     "react-facebook": "^8.1.4",
     "react-flatpickr": "^3.10.7",
+    "react-google-maps": "^9.4.5",
     "react-icons": "^4.4.0",
     "react-intl": "^5.20.2",
     "react-loading-overlay": "^1.0.1",
