--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
+    "@hookform/resolvers": "^2.9.6",
     "@reduxjs/toolkit": "^1.8.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^12.1.4",
@@ -35,6 +36,7 @@
     "react-facebook": "^8.1.4",
     "react-flatpickr": "^3.10.7",
     "react-google-maps": "^9.4.5",
+    "react-hook-form": "^7.33.1",
     "react-icons": "^4.4.0",
     "react-intl": "^5.20.2",
     "react-loading-overlay": "^1.0.1",
@@ -53,7 +55,8 @@
     "redux-thunk": "^2.4.1",
     "slick-carousel": "^1.8.1",
     "sweetalert2": "^11.4.8",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
